Splash screen arreglado y transiciones terminadas

--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,6 +12,7 @@
         android:id="@+id/logo"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:transitionName="logo"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -22,6 +23,7 @@
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:transitionName="appName"
         android:text="Masala Go"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -129,6 +131,7 @@
         android:id="@+id/LogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:transitionName="LogIn"
         android:layout_marginTop="20dp"
         android:width="500px"
         android:backgroundTint="#404040"
@@ -146,6 +149,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:transitionName="gotAccount"
         android:background="#00FFFFFF"
         android:backgroundTint="#003F51B5"
         android:backgroundTintMode="add"
