--- a/app/src/main/res/layout/activity_acceso.xml
+++ b/app/src/main/res/layout/activity_acceso.xml
@@ -9,6 +9,7 @@
 
     <ImageView
         android:id="@+id/logo"
+        android:transitionName="logo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
@@ -19,6 +20,7 @@
 
     <TextView
         android:id="@+id/appName"
+        android:transitionName="appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Masala Go"
@@ -81,6 +83,7 @@
 
     <CheckBox
         android:id="@+id/remember"
+        android:transitionName="remember"
         android:layout_width="90dp"
         android:layout_height="25dp"
         android:layout_marginRight="20dp"
@@ -94,6 +97,7 @@
 
     <Button
         android:id="@+id/LogIn"
+        android:transitionName="LogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="500px"
@@ -135,6 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
+        android:transitionName="forgotAccount"
         android:clickable="true"
         android:contextClickable="true"
         android:text="Olvidaste la contraseña?"
