--- a/app/src/main/res/layout/activity_arranque.xml
+++ b/app/src/main/res/layout/activity_arranque.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Arranque"
-    android:background="@drawable/background"
-    android:backgroundTint="k">
+    android:background="#E9E2BC">
 
     <ImageView
         android:id="@+id/logo"
@@ -58,10 +57,10 @@
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
         android:text="Masala Go"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
